[package]
name = "openlibrary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_with = { version = "3.12", features = ["macros"] }
serde_json = "1.0"
smol = "2.0"
isahc = {version = "1.7", features = ["json", "cookies"]}
